--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGOolSk28DJJdYls98hpKr",
+      "authorship_tag": "ABX9TyMe6ZJfL08uAm1kxV9taniP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "-HBVH6pwlUvv",
         "colab": {
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "7ts-qxA6ps0J"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "3mI0HlWer56Y"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "VWWUoKpvtvQT"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,6 +246,38 @@
         "id": "vgDxksI2vE4o"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def router_message(state: State):\n",
+        "  user_input = state[\"messages\"][-1].content\n",
+        "  classifier_llm = llm.with_structured_output(MessageClassifier)\n",
+        "  system_prompt = '''\n",
+        "                  classify user input to vector_db, web_search or generic_search based on below criteria\n",
+        "                  'vector_db': if user query is related to Agentic AI , AI Agent\n",
+        "                  \"web_search\": if user query needs current information to get answer\n",
+        "                  \"generic_search\": if user query is related to generic information and no need to call internet or vector db\n",
+        "                  '''\n",
+        "  result = classifier_llm.invoke(\n",
+        "      [\n",
+        "        {  \"role\": \"system\",\n",
+        "           \"content\": system_prompt\n",
+        "        },\n",
+        "        {\n",
+        "          \"role\": \"user\",\n",
+        "          \"content\": user_input\n",
+        "        }\n",
+        "\n",
+        "      ]\n",
+        "  )\n",
+        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":result.message_type}],\"user_input\":state[\"messages\"][-1].content,\"message_type\":result.message_type}"
+      ],
+      "metadata": {
+        "id": "Gei7bL8PzjC7"
+      },
+      "execution_count": 13,
       "outputs": []
     }
   ]
