--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe6ZJfL08uAm1kxV9taniP",
+      "authorship_tag": "ABX9TyPObhYL8mblm8bRiDMAVcuf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,14 +194,14 @@
       "metadata": {
         "id": "7ts-qxA6ps0J"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#create Stategraph\n",
-        "class state(TypedDict):\n",
+        "class State(TypedDict):\n",
         "  messages: Annotated[list[str], add_messages]\n",
         "  user_input: str\n",
         "  message_type: str"
@@ -209,7 +209,7 @@
       "metadata": {
         "id": "3mI0HlWer56Y"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "VWWUoKpvtvQT"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "oiZscsYuvD0d"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "vgDxksI2vE4o"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -277,7 +277,23 @@
       "metadata": {
         "id": "Gei7bL8PzjC7"
       },
-      "execution_count": 13,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph_bulider = StateGraph(State)\n",
+        "graph_bulider.add_node(\"classifer\",router_message)\n",
+        "graph_bulider.add_edge(START,router_message)\n",
+        "graph_bulider.add_edge(router_message,END)\n",
+        "\n",
+        "graph = graph_bulider.compile()"
+      ],
+      "metadata": {
+        "id": "ORLTS5hUz-BU"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
