--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+AT4AdKkI4Aw9dlV3sE/+",
+      "authorship_tag": "ABX9TyOk8zA2ofTsQzRzyRPcWh1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,11 +447,11 @@
         "retriver = db.as_retriever()"
       ],
       "metadata": {
-        "id": "m_9utm3V_5bd",
-        "outputId": "aec6836e-aabe-4a8c-e44e-3e4b50c097ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m_9utm3V_5bd",
+        "outputId": "aec6836e-aabe-4a8c-e44e-3e4b50c097ea"
       },
       "execution_count": 68,
       "outputs": [
@@ -559,9 +559,41 @@
     {
       "cell_type": "code",
       "source": [
+        "# Generic Serach\n",
+        "def get_context_from_generic_search(state):\n",
+        "  '''use this tool search query over web'''\n",
+        "  user_input = state[\"user_input\"]\n",
+        "  system_prompt = '''\n",
+        "                  refer user query and generate relevant information\n",
+        "                  '''\n",
+        "  generic_searchresult = llm.invoke(\n",
+        "      [\n",
+        "        {  \"role\": \"system\",\n",
+        "           \"content\": system_prompt\n",
+        "        },\n",
+        "        {\n",
+        "          \"role\": \"user\",\n",
+        "          \"content\": user_input\n",
+        "        }\n",
+        "      ]\n",
+        "  )\n",
+        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":generic_searchresult}]}"
+      ],
+      "metadata": {
+        "id": "8AqCjYsmLOdG"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "graph_bulider = StateGraph(State)\n",
         "graph_bulider.add_node(\"classifer\",router_message)\n",
         "graph_bulider.add_edge(START,\"classifer\")\n",
+        "graph_bulider.add_node(\"vector_db\",get_context_from_vectordb)\n",
+        "graph_bulider.add_node(\"web_search\",get_context_from_web_search)\n",
+        "graph_bulider.add_node(\"generic_search\",get_context_from_generic_search)\n",
         "graph_bulider.add_edge(\"classifer\",END)\n",
         "graph = graph_bulider.compile()"
       ],
