--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOk8zA2ofTsQzRzyRPcWh1f",
+      "authorship_tag": "ABX9TyMVMBvM9F9W3AYdEvpmxc30",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -594,13 +594,15 @@
         "graph_bulider.add_node(\"vector_db\",get_context_from_vectordb)\n",
         "graph_bulider.add_node(\"web_search\",get_context_from_web_search)\n",
         "graph_bulider.add_node(\"generic_search\",get_context_from_generic_search)\n",
+        "graph_bulider.add_conditional_edges(\"classifer\", lambda state:State.get(\"message_type\"),{\"web_search\":\"web_search\",\"vector_db\":\"vector_db\",\"generic_search\":\"generic_search\"})\n",
+        "\n",
         "graph_bulider.add_edge(\"classifer\",END)\n",
         "graph = graph_bulider.compile()"
       ],
       "metadata": {
         "id": "ORLTS5hUz-BU"
       },
-      "execution_count": 64,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -614,29 +616,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_OaYkbxA0m_R",
-        "outputId": "f0ffbefa-1a6b-472c-fe0c-7d85600239e1"
+        "outputId": "bdf5afeb-a43a-4d1c-e95b-c39933005537"
       },
-      "execution_count": 60,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----------+  \n",
-            "| __start__ |  \n",
-            "+-----------+  \n",
-            "      *        \n",
-            "      *        \n",
-            "      *        \n",
-            "+-----------+  \n",
-            "| classifer |  \n",
-            "+-----------+  \n",
-            "      *        \n",
-            "      *        \n",
-            "      *        \n",
-            " +---------+   \n",
-            " | __end__ |   \n",
-            " +---------+   \n"
+            "                            +-----------+                            \n",
+            "                            | __start__ |                            \n",
+            "                            +-----------+                            \n",
+            "                                  *                                  \n",
+            "                                  *                                  \n",
+            "                                  *                                  \n",
+            "                            +-----------+                            \n",
+            "                            | classifer |.                           \n",
+            "                        ....+-----------+ ....                       \n",
+            "                    ....           .          ....                   \n",
+            "                ....               .              ....               \n",
+            "             ...                   .                  ...            \n",
+            "+----------------+           +-----------+           +------------+  \n",
+            "| generic_search |           | vector_db |           | web_search |  \n",
+            "+----------------+**         +-----------+        ***+------------+  \n",
+            "                    ****           *          ****                   \n",
+            "                        ****       *      ****                       \n",
+            "                            ***    *   ***                           \n",
+            "                             +---------+                             \n",
+            "                             | __end__ |                             \n",
+            "                             +---------+                             \n"
           ]
         }
       ]
