--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVMBvM9F9W3AYdEvpmxc30",
+      "authorship_tag": "ABX9TyMfB8chLY50oTHNdLWijNTy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -582,7 +582,37 @@
       "metadata": {
         "id": "8AqCjYsmLOdG"
       },
-      "execution_count": 73,
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def finalResponse(state):\n",
+        "  user_input = state[\"user_input\"]\n",
+        "  context = state[\"messages\"][-1].content\n",
+        "  system_prompt = f'''\n",
+        "                   you are a helper tool, generate response for user query {user_input} in clear and concise manner using context {context}\n",
+        "                  '''\n",
+        "  result = llm.invoke(\n",
+        "      [\n",
+        "        {  \"role\": \"system\",\n",
+        "           \"content\": system_prompt\n",
+        "        },\n",
+        "        {\n",
+        "          \"role\": \"user\",\n",
+        "          \"content\": user_input\n",
+        "        }\n",
+        "\n",
+        "      ]\n",
+        "      )\n",
+        "\n",
+        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":result.content}]}"
+      ],
+      "metadata": {
+        "id": "mz1JRKppSFcN"
+      },
+      "execution_count": 78,
       "outputs": []
     },
     {
