--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfB8chLY50oTHNdLWijNTy",
+      "authorship_tag": "ABX9TyMw+pM8l1CQxvnN3q8kjJiI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -624,8 +624,12 @@
         "graph_bulider.add_node(\"vector_db\",get_context_from_vectordb)\n",
         "graph_bulider.add_node(\"web_search\",get_context_from_web_search)\n",
         "graph_bulider.add_node(\"generic_search\",get_context_from_generic_search)\n",
+        "graph_bulider.add_node(\"final_response\",finalResponse)\n",
         "graph_bulider.add_conditional_edges(\"classifer\", lambda state:State.get(\"message_type\"),{\"web_search\":\"web_search\",\"vector_db\":\"vector_db\",\"generic_search\":\"generic_search\"})\n",
         "\n",
+        "graph_bulider.add_edge(\"vector_db\",\"final_response\")\n",
+        "graph_bulider.add_edge(\"web_search\",\"final_response\")\n",
+        "graph_bulider.add_edge(\"generic_search\",\"final_response\")\n",
         "graph_bulider.add_edge(\"classifer\",END)\n",
         "graph = graph_bulider.compile()"
       ],
