--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -560,7 +560,7 @@
       "metadata": {
         "id": "8AqCjYsmLOdG"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "mz1JRKppSFcN"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
       "metadata": {
         "id": "ORLTS5hUz-BU"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,9 +628,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_OaYkbxA0m_R",
-        "outputId": "95c52b31-3db0-43f3-9bdb-2ad56bc40cad"
+        "outputId": "05f04fa2-77e8-4307-990f-74fa3e88f766"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +682,7 @@
       "metadata": {
         "id": "3ZY90K9cWdZW"
       },
-      "execution_count": 143,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -695,24 +695,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HaM2hCNaWefg",
-        "outputId": "d773f2fe-91e5-43c8-9fbf-6736251d1865"
+        "outputId": "9c021d05-0bee-4ca6-b3c9-47a6e059faf9"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'messages': [HumanMessage(content='what is 2+3', additional_kwargs={}, response_metadata={}, id='cbf3fb7a-3b30-4dc4-a394-7310f51365e8'),\n",
-              "  AIMessage(content='generic_search', additional_kwargs={}, response_metadata={}, id='b1cb543a-3c6d-497a-bf9b-7482f6d10cc3'),\n",
-              "  AIMessage(content='2 + 3 = 5', additional_kwargs={}, response_metadata={}, id='c2ccfd3c-c611-4e8b-b091-924b14ef3bdb'),\n",
-              "  AIMessage(content='2 + 3 = 5', additional_kwargs={}, response_metadata={}, id='fe95b2db-e388-4124-99ac-00c5a4418e7d')],\n",
-              " 'user_input': 'what is 2+3',\n",
-              " 'message_type': 'generic_search'}"
+              "{'messages': [HumanMessage(content='what is Agentic AI?', additional_kwargs={}, response_metadata={}, id='8f581419-30a2-4583-88d0-303c1d2ad7b0'),\n",
+              "  AIMessage(content='vector_db', additional_kwargs={}, response_metadata={}, id='1f5a0351-39ad-4b59-be9b-7480d399f19d'),\n",
+              "  AIMessage(content='How AI agents work\\n\\n2 Yonadov Shavit, Sandhini Agarwal, Miles Brundage, Steven Adler, Cullen O’Keefe, Rosie Campbell, Teddy Lee, Pamela Mishkin, Tyna Eloundou, Alan Hickey, Katarina Slama, Lama Ahmad, Paul McMillan, Alex Beutel, Alexandre Passos and David G. Robinson, “Practices for governing agentic AI Systems,”\\xa0OpenAI, 2023,\\xa0https://arxiv.org/pdf/2401.13138v3\\n\\nAnna Gutowska\\n\\nAI Engineer, Developer Advocate\\nIBM\\n\\n\\n\\n\\n\\n\\n\\r\\n        What are AI agents?\\r\\n    \\n\\n\\n\\nAn artificial intelligence (AI)\\xa0agent is a system that autonomously performs tasks by designing\\xa0workflows with available tools.\\n\\nOnce the missing information is gathered, the agent updates its knowledge base and engages in\\xa0agentic reasoning. This process involves continuously reassessing its plan of action and making self-corrections, which enables more informed and adaptive decision-making.\\nTo help illustrate this process, imagine a user planning their vacation. The user tasks an AI agent with predicting which week in the next year would likely have the best weather for their surfing trip in Greece.', additional_kwargs={}, response_metadata={}, id='2fed8339-8096-48f9-b3a3-b7a8810a8edb'),\n",
+              "  AIMessage(content='Agentic AI refers to AI systems that can autonomously perform tasks by designing workflows using available tools. They gather information, update their knowledge, and use reasoning to reassess plans and adapt, enabling more informed decision-making.', additional_kwargs={}, response_metadata={}, id='f251cac3-9019-4acc-a9a0-f2f0f91f56c5')],\n",
+              " 'user_input': 'what is Agentic AI?',\n",
+              " 'message_type': 'vector_db'}"
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 122
         }
       ]
     },
@@ -727,9 +727,9 @@
           "height": 35
         },
         "id": "ETlwP2r0XWgo",
-        "outputId": "406c8380-7730-442b-ea62-1f4685540c38"
+        "outputId": "68eb97d9-a244-4ed4-e7c3-d5c3a6d2a56c"
       },
-      "execution_count": 145,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,7 +742,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 147
         }
       ]
     }
