--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMC1+zqIZc9P62O6giyavHb",
+      "authorship_tag": "ABX9TyNkFU+wvDPSkjtU2pZS4OJi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,11 @@
       "execution_count": 1,
       "metadata": {
         "id": "Ool_h4X8uabR",
-        "outputId": "fd155f38-b22b-4247-bfba-6c6a3a71aece",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "fd155f38-b22b-4247-bfba-6c6a3a71aece"
       },
       "outputs": [
         {
@@ -200,50 +200,46 @@
         "messages = [\n",
         "    SystemMessage(\n",
         "        content=\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\"\n",
-        "    ),\n",
-        "    HumanMessage(\n",
-        "        content=\"What is AI\"\n",
         "    )\n",
         "]\n",
         "\n",
         "\n",
         "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
-        "user_input = input(\" \")\n",
-        "while user_input != 'exit':\n",
+        "user_input = input(\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\")\n",
+        "while user_input != 'No' or user_input != 'thank you':\n",
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
         "    messages.append(AIMessage(content=output.content))\n",
         "    print(\"------------------Updating the Message List--------------------\")\n",
         "    print(output.content)\n",
         "    print(\"message List is\", messages)\n",
-        "    user_input = input(\"Please enter your query or type 'exit' to end conversation\")"
+        "    user_input = input(\"Is there anything i could help you with\")"
       ],
       "metadata": {
-        "id": "dO-ChMrAvc_j",
-        "outputId": "c61da6ef-a6c0-44ff-df42-d7537ab16fb7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dO-ChMrAvc_j",
+        "outputId": "c0bbeaa0-af56-49cd-975e-792fc5546fa2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Hi! I am Bob, Your helpcare assistance, How can i assist you today? I am Indu\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'messages' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1397854154.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0muser_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Hi! I am Bob, Your helpcare assistance, How can i assist you today? \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0muser_input\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'exit'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mmessages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mHumanMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mllm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mmessages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAIMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'messages' is not defined"
+            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi I am Indu\n",
+            "------------------Updating the Message List--------------------\n",
+            "Hi Indu, nice to meet you! How can I assist you today?\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={})]\n",
+            "Is there anything i could help you withNo\n",
+            "------------------Updating the Message List--------------------\n",
+            "Okay! If you don't need any assistance right now, feel free to reach out if you need anything in the future. Have a great day!\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='No', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Okay! If you don't need any assistance right now, feel free to reach out if you need anything in the future. Have a great day!\", additional_kwargs={}, response_metadata={})]\n",
+            "Is there anything i could help you with Nope\n",
+            "------------------Updating the Message List--------------------\n",
+            "Understood! Just let me know if you change your mind. Have a good one!\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='No', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Okay! If you don't need any assistance right now, feel free to reach out if you need anything in the future. Have a great day!\", additional_kwargs={}, response_metadata={}), HumanMessage(content=' Nope', additional_kwargs={}, response_metadata={}), AIMessage(content='Understood! Just let me know if you change your mind. Have a good one!', additional_kwargs={}, response_metadata={})]\n"
           ]
         }
       ]
