--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkFU+wvDPSkjtU2pZS4OJi",
+      "authorship_tag": "ABX9TyPpqKkoRSMqc2UfMZkl0JSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
         "\n",
         "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
         "user_input = input(\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\")\n",
-        "while user_input != 'No' or user_input != 'thank you':\n",
+        "while user_input != 'No'and user_input != 'Nope':\n",
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
         "    messages.append(AIMessage(content=output.content))\n",
@@ -220,7 +220,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dO-ChMrAvc_j",
-        "outputId": "c0bbeaa0-af56-49cd-975e-792fc5546fa2"
+        "outputId": "aab057ea-0eee-4014-cf29-584f10e5a0d1"
       },
       "execution_count": null,
       "outputs": [
@@ -228,18 +228,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?Hi I am Indu\n",
+            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?I am Indu\n",
             "------------------Updating the Message List--------------------\n",
-            "Hi Indu, nice to meet you! How can I assist you today?\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={})]\n",
-            "Is there anything i could help you withNo\n",
+            "Hi Indu, it's nice to meet you! How can I help you today?\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu, it's nice to meet you! How can I help you today?\", additional_kwargs={}, response_metadata={})]\n",
+            "Is there anything i could help you withNope\n",
             "------------------Updating the Message List--------------------\n",
-            "Okay! If you don't need any assistance right now, feel free to reach out if you need anything in the future. Have a great day!\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='No', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Okay! If you don't need any assistance right now, feel free to reach out if you need anything in the future. Have a great day!\", additional_kwargs={}, response_metadata={})]\n",
-            "Is there anything i could help you with Nope\n",
-            "------------------Updating the Message List--------------------\n",
-            "Understood! Just let me know if you change your mind. Have a good one!\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content='Hi Indu, nice to meet you! How can I assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='No', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Okay! If you don't need any assistance right now, feel free to reach out if you need anything in the future. Have a great day!\", additional_kwargs={}, response_metadata={}), HumanMessage(content=' Nope', additional_kwargs={}, response_metadata={}), AIMessage(content='Understood! Just let me know if you change your mind. Have a good one!', additional_kwargs={}, response_metadata={})]\n"
+            "Okay! If you don't need any assistance right now, feel free to reach out later if anything comes up. Have a great day!\n",
+            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu, it's nice to meet you! How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content='Nope', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Okay! If you don't need any assistance right now, feel free to reach out later if anything comes up. Have a great day!\", additional_kwargs={}, response_metadata={})]\n"
           ]
         }
       ]
