--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpqKkoRSMqc2UfMZkl0JSw",
+      "authorship_tag": "ABX9TyNHAMQC4wnQAGmj2D12Jcch",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,18 +194,17 @@
         "    # other params...\n",
         ")\n",
         "\n",
-        "\n",
         "from langchain_core.messages import HumanMessage, SystemMessage\n",
-        "\n",
         "messages = [\n",
         "    SystemMessage(\n",
         "        content=\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\"\n",
         "    )\n",
         "]\n",
         "\n",
-        "\n",
+        "#AI Assisted Cahtbot for Patients\n",
         "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
         "user_input = input(\"Hi! I am Bob, Your helpcare assistance, How can i assist you today?\")\n",
+        "count = 0\n",
         "while user_input != 'No'and user_input != 'Nope':\n",
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
@@ -213,32 +212,17 @@
         "    print(\"------------------Updating the Message List--------------------\")\n",
         "    print(output.content)\n",
         "    print(\"message List is\", messages)\n",
-        "    user_input = input(\"Is there anything i could help you with\")"
+        "    count += 1\n",
+        "    if(count==1):\n",
+        "      user_input = input(\"Please share your PhoneNumber/ email ID\")\n",
+        "    else:\n",
+        "      user_input = input(\"Is there anything i could help you with\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dO-ChMrAvc_j",
-        "outputId": "aab057ea-0eee-4014-cf29-584f10e5a0d1"
+        "id": "dO-ChMrAvc_j"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hi! I am Bob, Your helpcare assistance, How can i assist you today?I am Indu\n",
-            "------------------Updating the Message List--------------------\n",
-            "Hi Indu, it's nice to meet you! How can I help you today?\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu, it's nice to meet you! How can I help you today?\", additional_kwargs={}, response_metadata={})]\n",
-            "Is there anything i could help you withNope\n",
-            "------------------Updating the Message List--------------------\n",
-            "Okay! If you don't need any assistance right now, feel free to reach out later if anything comes up. Have a great day!\n",
-            "message List is [SystemMessage(content='Hi! I am Bob, Your helpcare assistance, How can i assist you today?', additional_kwargs={}, response_metadata={}), HumanMessage(content='I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu, it's nice to meet you! How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content='Nope', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Okay! If you don't need any assistance right now, feel free to reach out later if anything comes up. Have a great day!\", additional_kwargs={}, response_metadata={})]\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
