--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHSR7WRyevv2Pr/ShZcVWL",
+      "authorship_tag": "ABX9TyNyXFgFoyez2o7EZp25qau4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "fd155f38-b22b-4247-bfba-6c6a3a71aece"
+        "outputId": "fd155f38-b22b-4247-bfba-6c6a3a71aece",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -182,6 +183,85 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# import necessary packages for building graph and state machine\n",
+        "from typing import Annotated, Literal\n",
+        "from typing_extensions import TypedDict\n",
+        "from langgraph.graph import StateGraph, START, END\n",
+        "from langgraph.graph.message import add_messages\n",
+        "from pydantic import BaseModel, Field\n",
+        "from langchain.schema import HumanMessage, SystemMessage"
+      ],
+      "metadata": {
+        "id": "Siu4nZC9_VSi"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#create Stategraph\n",
+        "class State(TypedDict):\n",
+        "  messages: Annotated[list[str], add_messages]\n",
+        "  user_input: str\n",
+        "  message_type: str"
+      ],
+      "metadata": {
+        "id": "hYOb7cG0_Ylp"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MessageClassifier(BaseModel):\n",
+        "  message_type: Literal[\"Patient_details\", \"Diagnostic_tool\", \"generic_search\"]=Field(description=\"classify the message\")"
+      ],
+      "metadata": {
+        "id": "pTvzS9AW_aZj"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def router_message(state: State):\n",
+        "  user_input = state[\"messages\"][-1].content\n",
+        "  classifier_llm = llm.with_structured_output(MessageClassifier)\n",
+        "  system_prompt = '''\n",
+        "                  classify user input to Patient_details, InternalSearch_tool or generic_search based on below criteria\n",
+        "                  'Patient_details': if user query has patient phonenumber or emailID\n",
+        "                  \"Diagnostic_tool\": if user query needs patient diagnostic reports\n",
+        "                  \"generic_search\": if user query is related to generic information and no need to call patient details or Diagnostic_tool\n",
+        "                  '''\n",
+        "  result = classifier_llm.invoke(\n",
+        "      [\n",
+        "        {  \"role\": \"system\",\n",
+        "           \"content\": system_prompt\n",
+        "        },\n",
+        "        {\n",
+        "          \"role\": \"user\",\n",
+        "          \"content\": user_input\n",
+        "        }\n",
+        "\n",
+        "      ]\n",
+        "  )\n",
+        "  return {\"messages\":[{\"role\":\"assistant\",\"content\":result.message_type}],\"user_input\":state[\"messages\"][-1].content,\"message_type\":result.message_type}\n",
+        ""
+      ],
+      "metadata": {
+        "id": "oRxmQ1pm_ka2"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import os\n",
         "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\"\n",
         "\n",
@@ -226,7 +306,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "#reading content form URL\n",
+        "from langchain_community.document_loaders import CSVLoader\n",
+        "\n",
+        "loader = CSVLoader(file_path='/content/Patient_Details.csv')\n",
+        "data = loader.load()\n"
+      ],
       "metadata": {
         "id": "3o96s9Yt_BPH"
       },
