--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyXFgFoyez2o7EZp25qau4",
+      "authorship_tag": "ABX9TyMMn56WOTFXb5HFBNFeo3nF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,7 +317,30 @@
       "metadata": {
         "id": "3o96s9Yt_BPH"
       },
-      "execution_count": null,
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# vectorDB tool\n",
+        "def get_patient_details(state):\n",
+        "  user_input = state[\"user_input\"]\n",
+        "  found = False\n",
+        "  for doc in data:\n",
+        "      if user_input in doc.page_content:\n",
+        "          found = True\n",
+        "          break\n",
+        "\n",
+        "  if found:\n",
+        "      print(f\"'{user_input}' found in the CSV.\")\n",
+        "  else:\n",
+        "      print(f\"'{user_input}' not found in the CSV.\")\n"
+      ],
+      "metadata": {
+        "id": "JS7v1HC4Af-T"
+      },
+      "execution_count": 47,
       "outputs": []
     }
   ]
