--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMn56WOTFXb5HFBNFeo3nF",
+      "authorship_tag": "ABX9TyNAEQm896cJS7WMFm1CPU63",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,6 +183,35 @@
     {
       "cell_type": "code",
       "source": [
+        "pip install grandalf"
+      ],
+      "metadata": {
+        "id": "TZL_Lja4BM7Q",
+        "outputId": "a4e702e1-e4d3-423b-b57a-004842384ce0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting grandalf\n",
+            "  Downloading grandalf-0.8-py3-none-any.whl.metadata (1.7 kB)\n",
+            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.11/dist-packages (from grandalf) (3.2.3)\n",
+            "Downloading grandalf-0.8-py3-none-any.whl (41 kB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/41.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.8/41.8 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: grandalf\n",
+            "Successfully installed grandalf-0.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "# import necessary packages for building graph and state machine\n",
         "from typing import Annotated, Literal\n",
@@ -341,6 +370,76 @@
         "id": "JS7v1HC4Af-T"
       },
       "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph_bulider = StateGraph(State)\n",
+        "graph_bulider.add_node(\"classifer\",router_message)\n",
+        "graph_bulider.add_edge(START,\"classifer\")\n",
+        "graph_bulider.add_edge(\"classifer\",END)\n",
+        "graph = graph_bulider.compile()"
+      ],
+      "metadata": {
+        "id": "FKkNMrP2A28L"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(graph.get_graph().draw_ascii())"
+      ],
+      "metadata": {
+        "id": "yZ-sDabCBCKr",
+        "outputId": "dc1128e9-4b2e-4dc1-a17b-479190a0ca70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+  \n",
+            "| __start__ |  \n",
+            "+-----------+  \n",
+            "      *        \n",
+            "      *        \n",
+            "      *        \n",
+            "+-----------+  \n",
+            "| classifer |  \n",
+            "+-----------+  \n",
+            "      *        \n",
+            "      *        \n",
+            "      *        \n",
+            " +---------+   \n",
+            " | __end__ |   \n",
+            " +---------+   \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "S32Vvb4zB4Lz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"indu@gmail.com\"}]})"
+      ],
+      "metadata": {
+        "id": "CKXeyCqxBdvC"
+      },
+      "execution_count": 54,
       "outputs": []
     }
   ]
