--- a/Day4_assignment_langgraph_medicalChatbot.ipynb
+++ b/Day4_assignment_langgraph_medicalChatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAEQm896cJS7WMFm1CPU63",
+      "authorship_tag": "ABX9TyNwbe5nsyGfAq792yI/lneP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,11 +186,11 @@
         "pip install grandalf"
       ],
       "metadata": {
-        "id": "TZL_Lja4BM7Q",
-        "outputId": "a4e702e1-e4d3-423b-b57a-004842384ce0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TZL_Lja4BM7Q",
+        "outputId": "a4e702e1-e4d3-423b-b57a-004842384ce0"
       },
       "execution_count": 51,
       "outputs": [
@@ -352,7 +352,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# vectorDB tool\n",
+        "# get_patient_details tool\n",
         "def get_patient_details(state):\n",
         "  user_input = state[\"user_input\"]\n",
         "  found = False\n",
@@ -375,16 +375,42 @@
     {
       "cell_type": "code",
       "source": [
+        "# Diagnostic_tool tool\n",
+        "def Diagnostic_tool(state):\n",
+        "  user_input = state[\"user_input\"]\n",
+        "  found = False\n",
+        "  for doc in data:\n",
+        "      if user_input in doc.page_content:\n",
+        "          found = True\n",
+        "          break\n",
+        "\n",
+        "  if found:\n",
+        "      print(f\"'{user_input}' found in the CSV.\")\n",
+        "  else:\n",
+        "      print(f\"'{user_input}' not found in the CSV.\")\n"
+      ],
+      "metadata": {
+        "id": "aECTFqj5DI4J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "graph_bulider = StateGraph(State)\n",
         "graph_bulider.add_node(\"classifer\",router_message)\n",
         "graph_bulider.add_edge(START,\"classifer\")\n",
-        "graph_bulider.add_edge(\"classifer\",END)\n",
+        "graph_bulider.add_node(\"Patient_details\",get_patient_details)\n",
+        "graph_bulider.add_conditional_edges(\"classifer\", lambda state:state.get(\"message_type\"),{\"Patient_details\":\"Patient_details\"})\n",
+        "\n",
+        "graph_bulider.add_edge(\"Patient_details\",END)\n",
         "graph = graph_bulider.compile()"
       ],
       "metadata": {
         "id": "FKkNMrP2A28L"
       },
-      "execution_count": 53,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -393,33 +419,39 @@
         "print(graph.get_graph().draw_ascii())"
       ],
       "metadata": {
-        "id": "yZ-sDabCBCKr",
-        "outputId": "dc1128e9-4b2e-4dc1-a17b-479190a0ca70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yZ-sDabCBCKr",
+        "outputId": "5387be4e-c88f-4815-fd37-6cb10ad81f88"
       },
-      "execution_count": 52,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----------+  \n",
-            "| __start__ |  \n",
-            "+-----------+  \n",
-            "      *        \n",
-            "      *        \n",
-            "      *        \n",
-            "+-----------+  \n",
-            "| classifer |  \n",
-            "+-----------+  \n",
-            "      *        \n",
-            "      *        \n",
-            "      *        \n",
-            " +---------+   \n",
-            " | __end__ |   \n",
-            " +---------+   \n"
+            "   +-----------+     \n",
+            "   | __start__ |     \n",
+            "   +-----------+     \n",
+            "          *          \n",
+            "          *          \n",
+            "          *          \n",
+            "   +-----------+     \n",
+            "   | classifer |     \n",
+            "   +-----------+     \n",
+            "          .          \n",
+            "          .          \n",
+            "          .          \n",
+            "+-----------------+  \n",
+            "| Patient_details |  \n",
+            "+-----------------+  \n",
+            "          *          \n",
+            "          *          \n",
+            "          *          \n",
+            "    +---------+      \n",
+            "    | __end__ |      \n",
+            "    +---------+      \n"
           ]
         }
       ]
@@ -437,10 +469,51 @@
         "result = graph.invoke({\"messages\":[{\"role\":\"user\", \"content\":\"indu@gmail.com\"}]})"
       ],
       "metadata": {
-        "id": "CKXeyCqxBdvC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CKXeyCqxBdvC",
+        "outputId": "2f4fe622-5fa2-4dd4-ae0e-d7b56b3afc1e"
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "'indu@gmail.com' found in the CSV.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result"
+      ],
+      "metadata": {
+        "id": "qH5A8KCXB-oP",
+        "outputId": "cc967df3-6fdd-4015-a255-d592c27af9bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'messages': [HumanMessage(content='indu@gmail.com', additional_kwargs={}, response_metadata={}, id='e42975bb-213d-46fc-a4f9-bb544e367cf2'),\n",
+              "  AIMessage(content='Patient_details', additional_kwargs={}, response_metadata={}, id='7d3f89ba-285c-4750-85bc-425cade93a76')],\n",
+              " 'user_input': 'indu@gmail.com',\n",
+              " 'message_type': 'Patient_details'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
     }
   ]
 }
